--- a/index.html
+++ b/index.html
@@ -129,118 +129,129 @@
 
 		<div id="BoardOne" class="CustomModal">
 			<!-- Modal content -->
-			<div class="CustomModal-content"><img src=""" class="modalImg" /></div>
+			<div class="CustomModal-content">
+				<img src="/img/EastBoothstown-Banners-VE.jpg" class="modalImg" />
+			</div>
 		</div>
 
 		<div id="BoardTwo" class="CustomModal">
 			<!-- Modal content -->
 			<div class="CustomModal-content">
-				<img src="" alt="" class="modalImg" />
+				<img
+					src="/img/EastBoothstown-Banners-VE2.jpg"
+					alt=""
+					class="modalImg"
+				/>
 			</div>
 		</div>
 
 		<div id="BoardThree" class="CustomModal">
 			<!-- Modal content -->
 			<div class="CustomModal-content">
-				<img src="" alt="" class="modalImg" />
+				<img
+					src="/img/EastBoothstown-Banners-VE3.jpg"
+					alt=""
+					class="modalImg"
+				/>
 			</div>
 		</div>
 
 		<div id="BoardFour" class="CustomModal">
 			<!-- Modal content -->
 			<div class="CustomModal-content">
-				<img src="" alt="" class="modalImg" />
+				<img
+					src="/img/EastBoothstown-Banners-VE4.jpg"
+					alt=""
+					class="modalImg"
+				/>
 			</div>
 		</div>
 
 		<div id="BoardFive" class="CustomModal">
 			<!-- Modal content -->
 			<div class="CustomModal-content">
-				<img src="" alt="" class="modalImg" />
+				<img
+					src="/img/EastBoothstown-Banners-VE5.jpg"
+					alt=""
+					class="modalImg"
+				/>
 			</div>
 		</div>
 
 		<div id="BoardSix" class="CustomModal">
 			<!-- Modal content -->
 			<div class="CustomModal-content">
-				<img src="" alt="" class="modalImg" />
+				<img
+					src="/img/EastBoothstown-Banners-VE6.jpg"
+					alt=""
+					class="modalImg"
+				/>
 			</div>
 		</div>
 
 		<div id="BoardSeven" class="CustomModal">
 			<!-- Modal content -->
 			<div class="CustomModal-content">
-				<img src="" alt="" class="modalImg" />
+				<img
+					src="/img/EastBoothstown-Banners-VE7.jpg"
+					alt=""
+					class="modalImg"
+				/>
 			</div>
 		</div>
 
 		<div id="BoardEight" class="CustomModal">
 			<!-- Modal content -->
 			<div class="CustomModal-content">
-				<img src="" alt="" class="modalImg" />
+				<img
+					src="/img/EastBoothstown-Banners-VE8.jpg"
+					alt=""
+					class="modalImg"
+				/>
 			</div>
 		</div>
 
 		<div id="BoardNine" class="CustomModal">
 			<!-- Modal content -->
 			<div class="CustomModal-content">
-				<img src="" alt="" class="modalImg" />
+				<img
+					src="/img/EastBoothstown-Banners-VE9.jpg"
+					alt=""
+					class="modalImg"
+				/>
 			</div>
 		</div>
 
 		<div id="BoardTen" class="CustomModal">
 			<!-- Modal content -->
 			<div class="CustomModal-content">
-				<img src="" alt="" class="modalImg" />
+				<img
+					src="/img/EastBoothstown-Banners-VE10.jpg"
+					alt=""
+					class="modalImg"
+				/>
 			</div>
 		</div>
 
 		<div id="BoardEleven" class="CustomModal">
 			<!-- Modal content -->
 			<div class="CustomModal-content">
-				<img src="" alt="" class="modalImg" />
+				<img
+					src="/img/EastBoothstown-Banners-VE11.jpg"
+					alt=""
+					class="modalImg"
+				/>
 			</div>
 		</div>
 
 		<div id="BoardTwelve" class="CustomModal">
 			<!-- Modal content -->
 			<div class="CustomModal-content">
-				<img src="" alt="" class="modalImg" />
-			</div>
-		</div>
-
-		<div id="BoardThirteen" class="CustomModal">
-			<!-- Modal content -->
-			<div class="CustomModal-content">
-				<img src="" alt="" class="modalImg" />
-			</div>
-		</div>
-
-		<div id="BoardFourteen" class="CustomModal">
-			<!-- Modal content -->
-			<div class="CustomModal-content">
-				<img src="" alt="" class="modalImg" />
-			</div>
-		</div>
-
-		<div id="BoardFifteen" class="CustomModal">
-			<!-- Modal content -->
-			<div class="CustomModal-content">
-				<img src="" alt="" class="modalImg" />
-			</div>
-		</div>
-
-		<div id="BoardSixteen" class="CustomModal">
-			<!-- Modal content -->
-			<div class="CustomModal-content">
-				<img src="" alt="" class="modalImg" />
-			</div>
-		</div>
-
-		<div id="BoardSeventeen" class="CustomModal">
-			<!-- Modal content -->
-			<div class="CustomModal-content">
-				<img src="" alt="" class="modalImg" />
+				<img
+					src="/img/EastBoothstown-Banners-VE12.jpg"
+					alt=""
+					class="modalImg"
+				/>
 			</div>
 		</div>
 	</body>
