--- a/index.html
+++ b/index.html
@@ -40,90 +40,64 @@
 
 		<div class="hsLabel" id="HS1">
 			<div class="tooltip">
-				<span class="tooltiptext">Board Title</span>
+				<span class="tooltiptext">Welcome</span>
 			</div>
 		</div>
 		<div class="hsLabel" id="HS2">
 			<div class="tooltip">
-				<span class="tooltiptext">Board Title</span>
+				<span class="tooltiptext">The Site</span>
 			</div>
 		</div>
 		<div class="hsLabel" id="HS3">
 			<div class="tooltip">
-				<span class="tooltiptext">Board Title</span>
+				<span class="tooltiptext">Our Vision</span>
 			</div>
 		</div>
 		<div class="hsLabel" id="HS4">
 			<div class="tooltip">
-				<span class="tooltiptext">Board Title</span>
+				<span class="tooltiptext">Sustainability</span>
 			</div>
 		</div>
 		<div class="hsLabel" id="HS5">
 			<div class="tooltip">
-				<span class="tooltiptext">Board Title</span>
+				<span class="tooltiptext">Character Areas</span>
 			</div>
 		</div>
 		<div class="hsLabel" id="HS6">
 			<div class="tooltip">
-				<span class="tooltiptext">Board Title</span>
+				<span class="tooltiptext">Masterplan</span>
 			</div>
 		</div>
 		<div class="hsLabel" id="HS7">
 			<div class="tooltip">
-				<span class="tooltiptext">Board Title</span>
+				<span class="tooltiptext">Delivery</span>
 			</div>
 		</div>
 		<div class="hsLabel" id="HS8">
 			<div class="tooltip">
-				<span class="tooltiptext">Board Title</span>
+				<span class="tooltiptext">Landscape Strategy</span>
 			</div>
 		</div>
 		<div class="hsLabel" id="HS9">
 			<div class="tooltip">
-				<span class="tooltiptext">Board Title</span>
+				<span class="tooltiptext">Site Considerations</span>
 			</div>
 		</div>
 		<div class="hsLabel" id="HS10">
 			<div class="tooltip">
-				<span class="tooltiptext">Board Title</span>
+				<span class="tooltiptext">Site Considerations</span>
 			</div>
 		</div>
 		<div class="hsLabel" id="HS11">
 			<div class="tooltip">
-				<span class="tooltiptext">Board Title</span>
+				<span class="tooltiptext">Benefits</span>
 			</div>
 		</div>
 		<div class="hsLabel" id="HS12">
 			<div class="tooltip">
-				<span class="tooltiptext">Board Title</span>
+				<span class="tooltiptext">Next Steps</span>
 			</div>
 		</div>
-		<div class="hsLabel" id="HS13">
-			<div class="tooltip">
-				<span class="tooltiptext">Board Title</span>
-			</div>
-		</div>
-		<div class="hsLabel" id="HS14">
-			<div class="tooltip">
-				<span class="tooltiptext">Board Title</span>
-			</div>
-		</div>
-		<div class="hsLabel" id="HS15">
-			<div class="tooltip">
-				<span class="tooltiptext">Board Title</span>
-			</div>
-		</div>
-		<div class="hsLabel" id="HS16">
-			<div class="tooltip">
-				<span class="tooltiptext">Board Title</span>
-			</div>
-		</div>
-		<div class="hsLabel" id="HS17">
-			<div class="tooltip">
-				<span class="tooltiptext">Board Title</span>
-			</div>
-		</div>
-
 		<script src="data.js"></script>
 		<script src="js/app.js"></script>
 
