changing colours of buttons

--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@
 		<div id="BoardOne" class="CustomModal">
 			<!-- Modal content -->
 			<div class="CustomModal-content">
-				<img src="/img/EastBoothstown-Banners-VE.jpg" class="modalImg" />
+				<img
+					src="/img/EastBoothstown-Banners-VirtualExhibtion.jpg"
+					class="modalImg"
+				/>
 			</div>
 		</div>
 
@@ -107,7 +110,7 @@
 			<!-- Modal content -->
 			<div class="CustomModal-content">
 				<img
-					src="/img/EastBoothstown-Banners-VE2.jpg"
+					src="/img/EastBoothstown-Banners-VirtualExhibtion2.jpg"
 					alt=""
 					class="modalImg"
 				/>
@@ -118,7 +121,7 @@
 			<!-- Modal content -->
 			<div class="CustomModal-content">
 				<img
-					src="/img/EastBoothstown-Banners-VE3.jpg"
+					src="/img/EastBoothstown-Banners-VirtualExhibtion3.jpg"
 					alt=""
 					class="modalImg"
 				/>
@@ -129,7 +132,7 @@
 			<!-- Modal content -->
 			<div class="CustomModal-content">
 				<img
-					src="/img/EastBoothstown-Banners-VE4.jpg"
+					src="/img/EastBoothstown-Banners-VirtualExhibtion4.jpg"
 					alt=""
 					class="modalImg"
 				/>
@@ -140,7 +143,7 @@
 			<!-- Modal content -->
 			<div class="CustomModal-content">
 				<img
-					src="/img/EastBoothstown-Banners-VE5.jpg"
+					src="/img/EastBoothstown-Banners-VirtualExhibtion5.jpg"
 					alt=""
 					class="modalImg"
 				/>
@@ -151,7 +154,7 @@
 			<!-- Modal content -->
 			<div class="CustomModal-content">
 				<img
-					src="/img/EastBoothstown-Banners-VE6.jpg"
+					src="/img/EastBoothstown-Banners-VirtualExhibtion6.jpg"
 					alt=""
 					class="modalImg"
 				/>
@@ -162,7 +165,7 @@
 			<!-- Modal content -->
 			<div class="CustomModal-content">
 				<img
-					src="/img/EastBoothstown-Banners-VE7.jpg"
+					src="/img/EastBoothstown-Banners-VirtualExhibtion7.jpg"
 					alt=""
 					class="modalImg"
 				/>
@@ -173,7 +176,7 @@
 			<!-- Modal content -->
 			<div class="CustomModal-content">
 				<img
-					src="/img/EastBoothstown-Banners-VE8.jpg"
+					src="/img/EastBoothstown-Banners-VirtualExhibtion8.jpg"
 					alt=""
 					class="modalImg"
 				/>
@@ -184,7 +187,7 @@
 			<!-- Modal content -->
 			<div class="CustomModal-content">
 				<img
-					src="/img/EastBoothstown-Banners-VE9.jpg"
+					src="/img/EastBoothstown-Banners-VirtualExhibtion9.jpg"
 					alt=""
 					class="modalImg"
 				/>
@@ -195,7 +198,7 @@
 			<!-- Modal content -->
 			<div class="CustomModal-content">
 				<img
-					src="/img/EastBoothstown-Banners-VE10.jpg"
+					src="/img/EastBoothstown-Banners-VirtualExhibtion11.jpg"
 					alt=""
 					class="modalImg"
 				/>
@@ -206,7 +209,7 @@
 			<!-- Modal content -->
 			<div class="CustomModal-content">
 				<img
-					src="/img/EastBoothstown-Banners-VE11.jpg"
+					src="/img/EastBoothstown-Banners-VirtualExhibtion11.jpg"
 					alt=""
 					class="modalImg"
 				/>
