changing colours of buttons

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 		</div>
 		<div class="hsLabel" id="HS4">
 			<div class="tooltip">
-				<span class="tooltiptext">Sustainability</span>
+				<span class="tooltiptext">Benefits</span>
 			</div>
 		</div>
 		<div class="hsLabel" id="HS5">
 			<div class="tooltip">
-				<span class="tooltiptext">Character Areas</span>
+				<span class="tooltiptext">Sustainability</span>
 			</div>
 		</div>
 		<div class="hsLabel" id="HS6">
@@ -70,27 +70,27 @@
 		</div>
 		<div class="hsLabel" id="HS7">
 			<div class="tooltip">
-				<span class="tooltiptext">Delivery</span>
+				<span class="tooltiptext">Landscape Character Areas</span>
 			</div>
 		</div>
 		<div class="hsLabel" id="HS8">
 			<div class="tooltip">
-				<span class="tooltiptext">Landscape Strategy</span>
+				<span class="tooltiptext">Delivery</span>
 			</div>
 		</div>
 		<div class="hsLabel" id="HS9">
 			<div class="tooltip">
-				<span class="tooltiptext">Site Considerations</span>
+				<span class="tooltiptext">Transport & Movement</span>
 			</div>
 		</div>
 		<div class="hsLabel" id="HS10">
 			<div class="tooltip">
-				<span class="tooltiptext">Site Considerations</span>
+				<span class="tooltiptext">Considerations</span>
 			</div>
 		</div>
 		<div class="hsLabel" id="HS11">
 			<div class="tooltip">
-				<span class="tooltiptext">Benefits</span>
+				<span class="tooltiptext">Next Steps</span>
 			</div>
 		</div>
 		<script src="data.js"></script>
