changing colours of buttons

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 			<!-- Modal content -->
 			<div class="CustomModal-content">
 				<img
-					src="/img/EastBoothstown-Banners-VirtualExhibtion11.jpg"
+					src="/img/EastBoothstown-Banners-VirtualExhibtion10.jpg"
 					alt=""
 					class="modalImg"
 				/>
@@ -209,7 +209,7 @@
 			<!-- Modal content -->
 			<div class="CustomModal-content">
 				<img
-					src="/img/EastBoothstown-Banners-VirtualExhibtion11.jpg"
+					src="/img/EastBoothstown-Banners-VirtualExhibtion9.png"
 					alt=""
 					class="modalImg"
 				/>
